# ddlwizard

./: .ddl_wizard_history.db  .gitignore  CONTRIBUTING.md  Dockerfile.test  INSTALL.md  LICENSE  README.md  README_v2.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  TECHNICAL_REFERENCE.md  TEST_README.md  alter_generator.py  comparison_roundtrip_issue.txt  config_manager.py  connection_manager.py  data_loss_analyzer.py  database.py  ddl_analyzer.py  ddl_wizard.py  ddl_wizard.py.backup  ddl_wizard_cli.py  ddl_wizard_config.yaml  ddl_wizard_core.py  ddl_wizard_gui.py  ddl_wizard_testsuite.py  debug_views.py  debug_views_manual.py  dependency_manager.py  docker-compose.test.yml  git_manager.py  gui_main.py  interactive_mode.py  main.py  migration_roundtrip_issue.sql  migration_script_failure.txt  pyproject.toml  quick_test.sh  requirements.txt  (+11 more)
.github/: copilot-instructions.md
comparison_demo/: comparison_report.txt  migration.sql  migration_report.md
ddl_output/: comparison_report.txt  migration.sql  migration_report.md  rollback.sql
ddl_output/documentation/: schema_documentation.html  schema_erd.dot  schema_erd.mmd  schema_structure.json
ddl_output/events/: cleanup_cancelled_orders.sql
ddl_output/functions/: GetUserTotalSpent.sql
ddl_output/procedures/: GetUserOrderHistory.sql
ddl_output/sequences/: user_id_seq.sql
ddl_output/tables/: categories.sql  order_items.sql  orders.sql  products.sql  users.sql
ddl_output/triggers/: update_stock_after_order.sql
ddl_output/views/: order_summary.sql
ddlwizard/: Reference_file_for_commands_and_connections.txt  __init__.py  cli.py  connection_parameters_for_test_instances.txt  core.py  gui.py  limitations.txt
ddlwizard/utils/: __init__.py  analyzer.py  comparator.py  config.py  database.py  dependencies.py  generator.py  interactive.py  migration.py  safety.py  visualizer.py
docs/: README_v2.md
img/: ddlwizard-logo.xcf
scripts/: quick_test.sh  setup_github_repo.sh
testdata/: README.md  demo_overview.py  destination_schema.sql  prepare_complex_data.sh  prepare_data.sh  source_schema.sql  syntax_check.sh  validate_setup.sh
testdata/complexdata/: README.md  destination_schema.sql  migration-failures.txt  source_schema.sql
tests/: conftest.py  test_integration.py
